# airbnb_clone

./: pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night_and_more.py
