[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = "airbnb clone (221106)"
authors = ["CastleRain <67889714+CastleRain@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
